New added features: Infix to Postfix converter

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,5 +18,9 @@
         <h3>🔺 Area of a Triangle</h3>
         <p>Compute the area of a triangle in one click.</p>
     </a>
+    <a href="/infix_postfix" class="card">
+        <h3>🪐 Infix to Postfix</h3>
+        <p>Convert infix expression to postfix</p>
+
 </section>
 {% endblock %}
